--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -18,6 +19,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-y: hidden;
   background-image: url("./assets/Untitled.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 #root {
