--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+
 @theme {
   --font-special-elite: "Special Elite", ui-serif, Georgia, Cambria,
     "Times New Roman", Times, serif;
@@ -17,7 +18,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: hidden;
+  overflow: hidden;
   background-image: url("./assets/background.png");
   background-size: cover;
   background-position: center;
